# ChangeLog for xfce-base/xfdesktop
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xfdesktop-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfdesktop-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  10 Nov 2008; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Bump gtk+/glib dependencies to 2.10

  27 Jun 2008; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Migrated to xfconf

  23 Jun 2008; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Sync with the main tree

  26 Feb 2008; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Renamed LANG to LINGUAS since LANG is already used by the build system, bug
  211481

  03 Dec 2007; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Improve USE=desktop-icon logic

  02 Dec 2007; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Added desktop-icons and menu-plugin USE flags

  30 Oct 2007; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Removed librsvg dependency

  12 Oct 2007; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Cleanup

  29 Sep 2007; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Fixed dodoc

  29 Jun 2007; Christoph Mende <angelos@gentoo.org> xfdesktop-9999.ebuild:
  Removed deprecated dependency on <dbus-1

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
