@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfdesktop-4.5.92.tar.bz2 3098257 RMD160 44dc97f747bb1d986b63c3d66b19fc49047ba567 SHA1 733617ac126669526cc7c89534203d34c17ee745 SHA256 3802a71048fb24ee688bdbbedcc1c96b05ce57b737a6a442ae31c1805e18e91a
-EBUILD xfdesktop-4.5.92.ebuild 1805 RMD160 217ccfe04525ea907861bbcf116c891ee99a92cb SHA1 e95b991595311516c5d7346fff00b0a5662973f0 SHA256 25dd1f64e1c8cf69a9732c8f3b77e15eae0f1161816b518add1a0b7f2db299f1
-EBUILD xfdesktop-9999.ebuild 1823 RMD160 a3856b45d323e77a44f51d3647a213fba25fb832 SHA1 f7fe83233ee469a675fff1938da73630565a362e SHA256 79375cd6462940e0f3173629cdbc03616a4386ddacace3d0fac2f433da4c036a
-MISC ChangeLog 1450 RMD160 af3a91d5c06e2bb15c627364786213e57ee7ab97 SHA1 b4a0ed94507e9fd6a22a28865361e0fc11d63338 SHA256 bf14694bdcad77227804c84297853f7631a7862054a4a2c8e19df0fe5846f705
+EBUILD xfdesktop-4.5.92.ebuild 1801 RMD160 355c7078ba5c7ddd471bc1045ef4360942e34057 SHA1 cf6a24e156aeec636f37c1a73356403ba5958f32 SHA256 4bc156144639c01d8ccb13acdf2712041aa486d1df684517382d7c3667934228
+EBUILD xfdesktop-9999.ebuild 1819 RMD160 0784aac7474febc8a2423be67ef128c8dc01d7a1 SHA1 5bf48e0a6e48ba92e9f694f385fe572575c4cfa3 SHA256 124e92da16020cb596da93c37f8817b6b8ebbd7291c03af1eb8b4b6b1d954654
+MISC ChangeLog 1592 RMD160 6efcf9c27e87af6d5279141627b0f7acd3733ee4 SHA1 7cb5f3087887ab98ebbd343905e1ec0ca4171848 SHA256 2870be7b215a50a876d9d8fb918186a709f42f852c5607da1ab9ec3a34184666
 MISC metadata.xml 351 RMD160 4401cf2e2c9cc9f166bdff78a1e15612e784ad1d SHA1 dc6b0946171dda265a9b13871899a9a8e071f6db SHA256 f2a98defe794e66d32ba0f9041a7b0afb7209345974f114ee2b8454dbe4bc6e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkdtmgACgkQKhnDs22gwa9FawCeOl/O5Wcmo2vRloPLGYjr7tKU
-V/8AoOYkorVBJhaWfC9GF6RTR12lrMMo
-=Pwpe
+iEYEARECAAYFAkkhtd0ACgkQKhnDs22gwa+aOQCgvPwTvOjoj1DJpWhwki/XqFkf
+PekAnA+0krpND3rSg6CmVF2SSFRqzmt9
+=bELl
 -----END PGP SIGNATURE-----
